use unpkg for requirejs deps as well

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-    <head></head>
-    <body>
-        <div id="root"></div>
-        <script data-main="scripts/main" src="scripts/require.js"></script>
-    </body>
+  <head></head>
+  <body>
+    <div id="root"></div>
+    <!-- <script data-main="scripts/main" src="scripts/require.js"></script> -->
+    <script
+      data-main="scripts/main"
+      src="https://unpkg.com/requirejs@2.3.6/require.js"
+    ></script>
+  </body>
 </html>
